revert to old demonstration file + fix blank pixel on top

--- a/ref.bib
+++ b/ref.bib
@@ -1,12 +1,12 @@
-@online{ruggieroSecurityFlawGoogle2018,
-  title = {Security {{Flaw}}: {{Google}} '{{Free Bikes}}' {{Stolen}} by the {{Hundreds Each Week}}},
-  shorttitle = {Security {{Flaw}}},
-  author = {Ruggiero, Adam},
-  date = {2018-01-08T20:15:36+00:00},
-  url = {https://gearjunkie.com/biking/google-bikes-stolen-theft},
-  urldate = {2024-10-09},
-  abstract = {Google's campus bike program has a significant theft problem – so the Silicon Valley behemoth is cracking down.},
-  langid = {american},
-  organization = {GearJunkie},
-  file = {/home/ourouk/Zotero/storage/FR89WL72/google-bikes-stolen-theft.html}
+@misc{azSpecificationsFonctionnellesExemples2023,
+  title = {{sp{\'e}cifications fonctionnelles : exemples et bonnes pratiques}},
+  shorttitle = {{sp{\'e}cifications fonctionnelles}},
+  author = {AZ},
+  year = {2023},
+  month = dec,
+  journal = {Le Cours Gratuit},
+  url = {https://lecoursgratuit.com/demystifier-les-specifications-fonctionnelles-exemples-modeles-et-bonnes-pratiques/},
+  urldate = {2024-05-20},
+  abstract = {D{\'e}mystifier les sp{\'e}cifications fonctionnelles : exemples, mod{\`e}les et bonnes pratiques / r{\'e}diger des sp{\'e}cifications fonctionnelles de projet},
+  langid = {french},
 }
